z-index fix

--- a/test.scss
+++ b/test.scss
@@ -6,7 +6,7 @@
 	list-style:none;
 	position:relative;
 	float:left;
-	margin-bottom:75px;
+	margin-bottom: 75px;
 	padding: 0;
 	width: 100%;
 	z-index: 9999;
@@ -44,7 +44,8 @@
 	top:100%;
 	left:0;
 	background:#fff;
-	padding:0
+	padding:0;
+	width: auto;
 }
 
 #primary_nav_wrap ul ul li {
